--- a/app/product.html
+++ b/app/product.html
@@ -449,32 +449,78 @@
 
       <section class="products">
          <div class="big-container">
-            <ul class="big-products__list">
-               <!-- Big Products Item -->
-               <li class="big-products__list__item">
-                   <div class="product-cart">
-                       <div class="product-cart__top">
-                           <small class="new-icon">Новое</small>
-                           <figure class="figure-product">
-                               <img class="product-img figure-product__first" src="img/product_1.jpg" alt="Картинка товара">
-                               <img class="product-img figure-product__second" src="img/category_1.JPG" alt="Картинка товара">
-                           </figure>
-                           <a class="fast-view" href="#">Быстрый просмотр</a>
-                       </div>
-                       <div class="product-cart__bottom">
-                           <div class="product-cart__bottom__left">
-                               <h4 class="product-title h4-style">Постельное бельё Stelvio</h4>
-                               <div class="product-cart__bottom__left__links">
-                                   <p class="price regular-fiveteen">BYN 40.00</p>
-                                   <a class="view-product-link regular-fiveteen" href="#">Просмотреть продукт</a>
-                               </div>
-                           </div>
-                           <div class="product-cart__bottom__right">
-                               <img class="add-like" src="img/Icon/Dark/Like.svg" alt="Like">
-                           </div>
-                       </div>
-                   </div>
-               </li>
+            <ul class="products__list list-item">
+                <!-- Big Products Item -->
+                <li class="big-products__list__item">
+                    <div class="product-cart">
+                        <div class="product-cart__top">
+                            <small class="new-icon">Новое</small>
+                            <figure class="figure-product">
+                                <img class="product-img figure-product__first" src="img/product_1.jpg" alt="Картинка товара">
+                                <img class="product-img figure-product__second" src="img/category_1.JPG" alt="Картинка товара">
+                            </figure>
+                            <a class="fast-view" href="#">Быстрый просмотр</a>
+                        </div>
+                        <div class="product-cart__bottom">
+                            <div class="product-cart__bottom__left">
+                                <h4 class="product-title h4-style">Постельное бельё Stelvio</h4>
+                                <div class="product-cart__bottom__left__links">
+                                    <p class="price regular-fiveteen">BYN 40.00</p>
+                                    <a class="view-product-link regular-fiveteen" href="#">Просмотреть продукт</a>
+                                </div>
+                                <ul class="product-color">
+                                    <li class="product-color__item">
+                                        <span class="color-select-circle color-red color-select"></span>
+                                    </li>
+                                    <li class="product-color__item">
+                                        <span class="color-select-circle color-blue"></span>
+                                    </li>
+                                </ul>
+                                <div class="additing-block-information">
+                                    <p class="block-description regular-fiveteen">Здесь будут отображаться самые новые и продоваемые продаваемые товары и услуги. </p>
+                                    <a class="stroke-button" href="#">Добавить в корзину</a>
+                                </div>
+                            </div>
+                            <div class="product-cart__bottom__right">
+                                <img class="add-like" src="img/Icon/Dark/Like.svg" alt="Like">
+                            </div>
+
+                        </div>
+                    </div>
+                </li>
+
+                <li class="big-products__list__item">
+                    <div class="product-cart">
+                        <div class="product-cart__top">
+                            <small class="new-icon">Новое</small>
+                            <figure class="figure-product">
+                                <img class="product-img figure-product__first" src="img/product_1.jpg" alt="Картинка товара">
+                                <img class="product-img figure-product__second" src="img/category_1.JPG" alt="Картинка товара">
+                            </figure>
+                            <a class="fast-view" href="#">Быстрый просмотр</a>
+                        </div>
+                        <div class="product-cart__bottom">
+                            <div class="product-cart__bottom__left">
+                                <h4 class="product-title h4-style">Постельное бельё Stelvio</h4>
+                                <div class="product-cart__bottom__left__links">
+                                    <p class="price regular-fiveteen">BYN 40.00</p>
+                                    <a class="view-product-link regular-fiveteen" href="#">Просмотреть продукт</a>
+                                </div>
+                                <ul class="product-color">
+                                    <li class="product-color__item">
+                                        <span class="color-select-circle color-red color-select"></span>
+                                    </li>
+                                    <li class="product-color__item">
+                                    <span class="color-select-circle color-blue"></span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="product-cart__bottom__right">
+                                <img class="add-like" src="img/Icon/Dark/Like.svg" alt="Like">
+                            </div>
+                        </div>
+                    </div>
+                </li>
                
                <li class="big-products__list__item">
                    <div class="product-cart">
@@ -499,6 +545,40 @@
                        </div>
                    </div>
                </li>
+
+                <li class="big-products__list__item">
+                    <div class="product-cart">
+                        <div class="product-cart__top">
+                            <small class="new-icon">Новое</small>
+                            <figure class="figure-product">
+                                <img class="product-img figure-product__first" src="img/product_1.jpg" alt="Картинка товара">
+                                <img class="product-img figure-product__second" src="img/category_1.JPG" alt="Картинка товара">
+                            </figure>
+                            <a class="fast-view" href="#">Быстрый просмотр</a>
+                        </div>
+                        <div class="product-cart__bottom">
+                            <div class="product-cart__bottom__left">
+                                <h4 class="product-title h4-style">Постельное бельё Stelvio</h4>
+                                <div class="product-cart__bottom__left__links">
+                                    <p class="price regular-fiveteen">BYN 40.00</p>
+                                    <a class="view-product-link regular-fiveteen" href="#">Просмотреть продукт</a>
+                                </div>
+                                <ul class="product-color">
+                                    <li class="product-color__item">
+                                        <span class="color-select-circle color-red color-select"></span>
+                                    </li>
+                                    <li class="product-color__item">
+                                    <span class="color-select-circle color-blue"></span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="product-cart__bottom__right">
+                                <img class="add-like" src="img/Icon/Dark/Like.svg" alt="Like">
+                            </div>
+
+                        </div>
+                    </div>
+                </li>
 
                <li class="big-products__list__item">
                    <div class="product-cart">
