single prod page

--- a/app/product.html
+++ b/app/product.html
@@ -470,14 +470,14 @@
                                 <img class="product-img figure-product__first" src="img/product_1.jpg" alt="Картинка товара">
                                 <img class="product-img figure-product__second" src="img/category_1.JPG" alt="Картинка товара">
                             </figure>
-                            <a class="fast-view" href="#">Быстрый просмотр</a>
+                            <a class="fast-view" href="product-single.html">Быстрый просмотр</a>
                         </div>
                         <div class="product-cart__bottom">
                             <div class="product-cart__bottom__left">
                                 <h4 class="product-title h4-style">Постельное бельё Stelvio</h4>
                                 <div class="product-cart__bottom__left__links">
                                     <p class="price regular-fiveteen">BYN 40.00</p>
-                                    <a class="view-product-link regular-fiveteen" href="#">Просмотреть продукт</a>
+                                    <a class="view-product-link regular-fiveteen" href="product-single.html">Просмотреть продукт</a>
                                 </div>
                                 <ul class="product-color">
                                     <li class="product-color__item">
@@ -776,7 +776,21 @@
                     </div>
                 </li>
                <!-- Big Products Item -->
-           </ul>
+            </ul>
+            <div class="paggination">
+                <a class="page-prev page-arrow prev-no">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="9.534" height="17.316" viewBox="0 0 9.534 17.316"><g transform="translate(63.647 17.316) rotate(180)"><path d="M63.394,8.04,55.607.256a.874.874,0,0,0-1.238,1.235l7.169,7.167L54.37,15.824a.875.875,0,1,0,1.238,1.236l7.787-7.784A.882.882,0,0,0,63.394,8.04Z"/></g></svg>
+                </a>
+                <ul class="paggination__list">
+                    <li class="paggination__list__item active-page"><a href="#">1</a></li>
+                    <li class="paggination__list__item"><a href="#">2</a></li>
+                    <li class="paggination__list__item"><a href="#">3</a></li>
+                    <li class="paggination__list__item"><a href="#">4</a></li>
+                </ul>
+                <a class="page-next page-arrow">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="9.534" height="17.316" viewBox="0 0 9.534 17.316"><g transform="translate(-54.113)"><path d="M63.394,8.04,55.607.256a.874.874,0,0,0-1.238,1.235l7.169,7.167L54.37,15.824a.875.875,0,1,0,1.238,1.236l7.787-7.784A.882.882,0,0,0,63.394,8.04Z"/></g></svg>
+                </a>
+            </div>
          </div>
       </section>
 
