--- a/app/product-single.html
+++ b/app/product-single.html
@@ -573,9 +573,9 @@
                             </li>
                             <!-- Comment List -->
                         </ul>
-                        <button class="stroke-button-dark">Добавить комментарий</button>
-                    </div>
-                    <div class="comments-product__add">
+                        <button id="comments-hidden-toggle" class="stroke-button-dark">Добавить комментарий</button>
+                    </div> 
+                    <div id="comments-toggle" class="comments-product__add comments-hidden">
                         <form class="comment-form" method="POST" action="/">
                             <p class="comments-notes">Поля помеченные <small>*</small> обязательны для заполнения.</p>
                             <div class="comments-rating">
